--- a/ChromeExtension/style.css
+++ b/ChromeExtension/style.css
@@ -18,3 +18,14 @@ font{
   color: darkblue;
   font-weight: 900;
 }
+
+/*table styling*/
+/*https://www.w3schools.com/css/css_table.asp*/
+table, td, th {
+  border: 1px solid;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
