--- a/ChromeExtension/style.css
+++ b/ChromeExtension/style.css
@@ -6,10 +6,10 @@
 https://stackoverflow.com/questions/3942254/how-to-specify-font-attributes-for-all-elements-on-an-html-web-page
 */
 
-* {
+/** {
   font-size: 100%;
   font-family: Arial;
- }
+ }*/
 
 /*https://www.w3schools.com/css/css_font.asp*/
 /*https://www.w3schools.com/css/tryit.asp?filename=trycss_font-family*/
@@ -32,7 +32,7 @@ table {
 }
 
 .className{
-  background-color:red;
+  display:none;
 }
 
 .leftColumn{
