--- a/ChromeExtension/style.css
+++ b/ChromeExtension/style.css
@@ -13,7 +13,7 @@ https://stackoverflow.com/questions/3942254/how-to-specify-font-attributes-for-a
 
 /*https://www.w3schools.com/css/css_font.asp*/
 /*https://www.w3schools.com/css/tryit.asp?filename=trycss_font-family*/
-pre, font{
+pre, font, .code{
   font-family: "Lucida Console", "Courier New", monospace;
   color: darkblue;
   font-weight: 900;
